k8s/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: computerwtf-ingress
  annotations:
    cert-manager.io/cluster-issuer: "letsencrypt-prod"
spec:
  ingressClassName: nginx
  tls:
  - hosts:
    - lgbt.church
    secretName: computerwtf-tls
  rules:
  - host: lgbt.church
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: computerwtf-service
            port:
              number: 80
